# zuul

./: .envrc.example  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  docker-compose.emulator.yml  sonar-project.properties
.github/workflows/: build.yml  ci.yml  release.yml
docs/: backend-file.md  backend-gcp.md  env-admin-playbook.md  gcp-env-playbook.md  zuul-spec.md
src/: config.rs  error.rs  export.rs  journal.rs  lib.rs  main.rs  models.rs  progress.rs  prompt.rs
src/backend/: file_backend.rs  gcp.rs  gcp_backend.rs  mod.rs
src/cli/: audit.rs  auth.rs  diff.rs  env.rs  export.rs  import.rs  init.rs  metadata.rs  mod.rs  recover.rs  run.rs  secret.rs
src/cli/deploy/: fly.rs
src/cli/sync/: fly.rs  mod.rs  netlify.rs
terraform/: README.md  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: access_control_unit.rs  cli_parsing.rs  e2e.rs
tests/integration/: access_control.rs  diff.rs  env.rs
tests/integration/file_backend/: cli_audit.rs  cli_auth.rs  cli_diff.rs  cli_edge_cases.rs  cli_env.rs  cli_export_import.rs  cli_init.rs  cli_json_output.rs  cli_metadata.rs  cli_secret.rs  environments.rs  helpers.rs  main.rs  metadata.rs  secrets.rs
tests/integration/gcp_emulator/: access_control.rs  auth.rs  config_errors.rs  diff.rs  env.rs  export_import.rs  helpers.rs  init.rs  main.rs  metadata.rs  secret.rs
tests/integration/mock_backend/: access_control.rs  common.rs  journal.rs  main.rs  recover.rs
