[package]
name = "zuul"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for managing secrets across multiple environments, backed by pluggable cloud secret managers"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
gcloud-sdk = { version = "0.28", features = ["google-cloud-secretmanager-v1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
toml = "0.8"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
