[package]
name = "zuul"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for managing secrets across multiple environments, backed by pluggable cloud secret managers"

[dependencies]
anyhow = "1"
async-trait = "0.1"
backon = "1.6.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7.2.2"
crc32c = "0.6.8"
dialoguer = "0.12.0"
gcloud-sdk = { version = "0.28", features = ["google-cloud-secretmanager-v1"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
