[package]
name = "zuul"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "CLI tool for managing secrets across multiple environments, backed by pluggable cloud secret managers"
license = "MIT"

[dependencies]
age = { package = "age", version = "0.10" }
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7.2.2"
console = "0.16.3"
dialoguer = "0.12.0"
fs2 = "0.4"
google-cloud-auth = "1"
google-cloud-gax = "1"
google-cloud-secretmanager-v1 = { version = "1", default-features = false }
indicatif = "0.18.4"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1"
google-cloud-wkt = "1"

[dev-dependencies]
base64 = "0.22"
serial_test = "3"
tempfile = "3"

[[test]]
name = "gcp_emulator"
path = "tests/integration/gcp_emulator/main.rs"

[[test]]
name = "mock_backend"
path = "tests/integration/mock_backend/main.rs"

[[test]]
name = "file_backend"
path = "tests/integration/file_backend/main.rs"
